--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:layout_marginBottom="115dp">
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -14,11 +15,11 @@
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/productPrice" android:layout_weight="1"/>
+                android:layout_height="wrap_content" android:id="@+id/productsCount" android:layout_weight="1"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/productsCount" android:layout_weight="1"/>
+                android:layout_height="wrap_content" android:id="@+id/productPrice" android:layout_weight="1"/>
         <CheckBox
                 android:text="In stock"
                 android:clickable="false"
@@ -30,24 +31,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
-                android:text="TextView"
+                android:text="Дата:"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/productDeliveryYear" android:layout_weight="1"/>
+                android:layout_height="wrap_content" android:id="@+id/dateLabel" android:layout_weight="1"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/productDeliveryMonth" android:layout_weight="1"/>
+                android:layout_height="wrap_content" android:id="@+id/productDate" android:layout_weight="1"/>
         <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/productDeliveryDay" android:layout_weight="1"/>
-    </LinearLayout>
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <TextView
-                android:text="TextView"
+                android:text="Категорія: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/productCategoryLabel" android:layout_weight="1"/>
         <TextView
@@ -55,6 +47,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/productCategoryName" android:layout_weight="1"/>
     </LinearLayout>
+    <LinearLayout
+            android:id="@+id/dynamic_content"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
