Add product base

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -33,7 +33,7 @@
         <TextView
                 android:text="Дата:"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/dateLabel" android:layout_weight="1"/>
+                android:layout_height="wrap_content" android:id="@+id/addProductDateLabel" android:layout_weight="1"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
