--- a/app/src/main/res/layout/add_base_product.xml
+++ b/app/src/main/res/layout/add_base_product.xml
@@ -7,29 +7,29 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
+            android:layout_height="wrap_content" android:layout_weight="0">
         <TextView
                 android:text="Name:"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" android:id="@+id/addProductNameLabel" android:layout_weight="1"/>
         <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:layout_weight="1" android:id="@+id/addProductName"></EditText>
-    </LinearLayout>
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
-        <TextView
-                android:text="Description:"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/productDescriptionLabel"/>
-        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:layout_weight="1" android:id="@+id/addProductDescription"></EditText>
+                  android:layout_weight="3" android:id="@+id/addProductName"></EditText>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
+            android:layout_height="wrap_content" android:layout_weight="0">
+        <TextView
+                android:text="Description:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/productDescriptionLabel" android:layout_weight="1"/>
+        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:layout_weight="4" android:id="@+id/addProductDescription"></EditText>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_weight="0">
         <TextView
                 android:text="Price:"
                 android:layout_width="match_parent"
@@ -40,29 +40,30 @@
                 android:text="In stock"
                 android:clickable="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/addProductInStock" android:layout_weight="1"/>
+                android:layout_height="wrap_content" android:id="@+id/addProductInStock" android:layout_weight="1"
+                android:textAlignment="center"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
+            android:layout_height="wrap_content" android:layout_weight="0">
         <TextView
                 android:text="Count:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/addProductsCountLabel" android:layout_weight="1"/>
         <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:layout_weight="1" android:id="@+id/addProductCount"></EditText>
+                  android:layout_weight="3" android:id="@+id/addProductCount"></EditText>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
+            android:layout_height="wrap_content" android:layout_weight="0">
         <TextView
                 android:text="Категорія: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/productCategoryLabel" android:layout_weight="1"/>
         <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:layout_weight="1" android:id="@+id/addProductCategory"></EditText>
+                  android:layout_weight="4" android:id="@+id/addProductCategory"></EditText>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
