Added phone adding page

--- a/app/src/main/res/layout/add_phone_product.xml
+++ b/app/src/main/res/layout/add_phone_product.xml
@@ -4,5 +4,39 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <include layout="@layout/add_base_product"/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TextView
+                android:text="Phone width (px):"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/addPhoneWidthLabel" android:layout_weight="1"/>
+        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:layout_weight="3" android:id="@+id/addPhoneWidth"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TextView
+                android:text="Phone height (px):"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/addPhoneHeightLabel" android:layout_weight="1"/>
+        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:layout_weight="3" android:id="@+id/addPhoneHeight"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TextView
+                android:text="Phone battery (mAh):"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/addPhoneBatteryLabel" android:layout_weight="1"/>
+        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:layout_weight="3" android:id="@+id/addPhoneBattery"/>
+    </LinearLayout>
 
 </LinearLayout>
