--- a/app/src/main/res/layout/activity_add_phone.xml
+++ b/app/src/main/res/layout/activity_add_phone.xml
@@ -14,7 +14,7 @@
         <Button
                 android:text="Add"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/button" android:onClick="onAdd"/>
+                android:layout_height="wrap_content" android:id="@+id/button" android:onClick="onAddClick"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
