--- a/app/src/main/res/layout/activity_add_product_base.xml
+++ b/app/src/main/res/layout/activity_add_product_base.xml
@@ -20,9 +20,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/addPhone"/>
         <Button
-                android:text="@android:string/cancel"
+                android:text="Go back"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/addCancel"
+                android:layout_height="wrap_content" android:id="@+id/goBack"
                 android:layout_gravity="bottom|end"
         />
     </LinearLayout>
