--- a/app/src/main/res/layout/add_base_product.xml
+++ b/app/src/main/res/layout/add_base_product.xml
@@ -72,19 +72,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:layout_weight="0">
         <TextView
-                android:text="Дата:"
+                android:text="Date:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/addProductDateLabel" android:layout_weight="1"/>
         <TextView
-                android:text="Рік:"
+                android:text="Year:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/addProductYearLabel" android:layout_weight="1"/>
         <TextView
-                android:text="Місяць:"
+                android:text="Month:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/addProductMonthLabel" android:layout_weight="1"/>
         <TextView
-                android:text="День:"
+                android:text="Day:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/addProductDayLabel" android:layout_weight="1"/>
     </LinearLayout>
