--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:layout_marginBottom="115dp">
     <LinearLayout
             android:orientation="horizontal"
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
-                android:text="Дата:"
+                android:text="Date:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/addProductDateLabel" android:layout_weight="1"/>
         <TextView
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/productDate" android:layout_weight="1"/>
         <TextView
-                android:text="Категорія: "
+                android:text="Category: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/productCategoryLabel" android:layout_weight="1"/>
         <TextView
@@ -51,10 +51,23 @@
             android:id="@+id/dynamic_content"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/productDescription" android:layout_weight="1"/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <Button
+                android:text="Delete "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/productDeleteBtn" android:layout_weight="2"/>
+        <Button
+                android:text="Update"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/productUpdateBtn" android:layout_weight="3"/>
+    </LinearLayout>
 </LinearLayout>
