--- a/app/src/main/res/layout/add_phone_product.xml
+++ b/app/src/main/res/layout/add_phone_product.xml
@@ -14,7 +14,7 @@
                 android:inputType="numberDecimal"
                 android:layout_height="wrap_content" android:id="@+id/addPhoneWidthLabel" android:layout_weight="1"/>
         <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:layout_weight="3" android:id="@+id/addPhoneWidth"/>
+                  android:layout_weight="3" android:id="@+id/addPhoneWidth" android:inputType="numberDecimal"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
