--- a/app/src/main/res/layout/add_base_product.xml
+++ b/app/src/main/res/layout/add_base_product.xml
@@ -61,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:layout_weight="0">
         <TextView
-                android:text="Категорія: "
+                android:text="Category: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/productCategoryLabel" android:layout_weight="1"/>
         <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
